<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EmergencyRoom</string>
    <!-- main activity: login -->
    <string name="menu_settings">Settings</string>
    <string name="nurse_login">Nurse Login</string>
    <string name="user_name">user name: </string>
    <string name="password">password: </string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="nurse">Nurse</string>
    <string name="physician">Physician</string>

    <!-- choose options avtivity -->
    <string name="choose_options">Choose Options</string>
    <string name="record_patient">Record New Patient</string>
    <string name="update_patient">Update Existing Patient</string>
    <string name="unseen_patients">Unseen Patients List</string>

    <!-- record new patient -->
    <string name="name">name: </string>
    <string name="hint_name">Name</string>
    <string name="health_card_num">health card number: </string>
    <string name="hint_health_num">Health Card Number</string>
    <string name="dob">date of birth: </string>
    <string name="hint_dob">MM/DD/YYYY</string>

    <!-- record and update patient -->
    <string name="find_patient">Enter the health card number of the patient:</string>
    <string name="body_temp">body temperature: </string>
    <string name="hint_body_temp">Body Temp(ie. 37.0)</string>
    <string name="systolic_bp">systolic blood pressure: </string>
    <string name="hint_systolic">max pressure(ie. 135)</string>
    <string name="diastolic_bp">diastolic blood pressure: </string>
    <string name="hint_diastolic">min pressure(ie. 80)</string>
    <string name="heart_rate">heart rate: </string>
    <string name="hint_heart_rate">Heart Rate(ie. 75)</string>
    
    <!-- prescription -->
    <string name="medication">Medication: </string>
    <string name="instruction">Instruction: </string>
    
    <!-- button -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="record">Record</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="back">Back to Options</string>
    <string name="continued">Continue</string>
    <string name="submit">Submit</string>

        <!-- titles -->
    <string name="title_activity_choice">Choose an Option</string>
    <string name="prescription">Prescription</string>
    <string name="back_to_search">Back</string>
    <string name="title_activity_display_record">Record Status</string>
    <string name="title_activity_display_save">Save Status</string>
    <string name="title_activity_display_update">Update Status</string>
    <string name="title_activity_record">Record a new Patient</string>
    <string name="title_activity_update">Update a Patient</string>
    <string name="title_activity_find_patient">Find the Patient</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_display_patient">DisplayPatientActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_prescription">AddPrescriptionActivity</string>
    <string name="title_activity_unseen_patients">UnseenPatientsActivity</string>
    <string name="action_settings">Settings</string>


</resources>